# Chirper

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml  requirements.txt
.github/workflows/: build.yml
authentication/: forms.py  urls.py  views.py
authentication/templates/: login.html  signup.html
chirper/: asgi.py  settings.py  urls.py  views.py  wsgi.py
post/: factories.py  urls.py  views.py
post/migrations/: 0001_initial.py
post/models/: post.py
post/serializers/: post_serializer.py
post/templates/: base_generic.html  index.html  posts.html
post/tests/test_viewsets/: test_post_viewset.py
post/viewsets/: post_viewset.py
static/css/: styles.css
static/js/: modal.js  password_validation.js  signup_ajax.js
staticfiles/css/: styles.css
